--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,4 @@
 salvo.com.sucesso = Salvo com sucesso!
+
+erro.bancoform.nome.size = O nome do banco deve estar entre {2} e {1}.
+erro.bancoform.nome.notblank = O nome do banco deve ser preenchido.
