--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,3 @@
-salvo.com.sucesso = Salvo com sucesso!
-
-erro.bancoform.nome.size = O nome do banco deve estar entre {2} e {1}.
-erro.bancoform.nome.notblank = O nome do banco deve ser preenchido.
+banco.salvo.com.sucesso = Banco salvo com sucesso!
+erro.banco.nome.size = O nome do banco deve estar entre {2} e {1}.
+erro.banco.nome.notblank = O nome do banco deve ser preenchido.
