--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 banco.salvo.com.sucesso = Banco salvo com sucesso!
+banco.alterado.com.sucesso = Banco alterado com sucesso!
+banco.excluido.com.sucesso = Banco excluído com sucesso!
 erro.banco.nome.size = O nome do banco deve estar entre {2} e {1}.
 erro.banco.nome.notblank = O nome do banco deve ser preenchido.
